Add support for working with order sequences via the web API
Order sequences can be created/retrieved and their complete flag can
be set.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>
