# openTCS-Kernel-Extension-HTTP-Services/src/main/java/org/opentcs/kernel/extensions/servicewebapi/v1/RequestStatusHandler.java
@@ -22,14 +22,17 @@ import org.opentcs.components.kernel.services.VehicleService;
 import org.opentcs.customizations.kernel.KernelExecutor;
 import org.opentcs.data.ObjectUnknownException;
 import org.opentcs.data.model.Vehicle;
+import org.opentcs.data.order.OrderSequence;
 import org.opentcs.data.order.TransportOrder;
 import org.opentcs.data.peripherals.PeripheralJob;
 import org.opentcs.drivers.vehicle.VehicleCommAdapterDescription;
 import org.opentcs.drivers.vehicle.management.AttachmentInformation;
+import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetOrderSequenceResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetPeripheralJobResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetTransportOrderResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetVehicleResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.PutVehicleAllowedOrderTypesTO;
+import org.opentcs.kernel.extensions.servicewebapi.v1.filter.OrderSequenceFilter;
 import org.opentcs.kernel.extensions.servicewebapi.v1.filter.PeripheralJobFilter;
 import org.opentcs.kernel.extensions.servicewebapi.v1.filter.TransportOrderFilter;
 import org.opentcs.kernel.extensions.servicewebapi.v1.filter.VehicleFilter;
@@ -313,6 +316,61 @@ public class RequestStatusHandler {
       kernelExecutor.submit(
           () -> vehicleService.updateVehicleAllowedOrderTypes(
               vehicle.getReference(), new HashSet<>(allowedOrderTypes.getOrderTypes()))
+      ).get();
+    }
+    catch (InterruptedException exc) {
+      throw new IllegalStateException("Unexpectedly interrupted");
+    }
+    catch (ExecutionException exc) {
+      if (exc.getCause() instanceof RuntimeException) {
+        throw (RuntimeException) exc.getCause();
+      }
+      throw new KernelRuntimeException(exc.getCause());
+    }
+  }
+
+  public List<GetOrderSequenceResponseTO> getOrderSequences(@Nullable String intendedVehicle) {
+    if (intendedVehicle != null) {
+      Vehicle vehicle = orderService.fetchObject(Vehicle.class, intendedVehicle);
+      if (vehicle == null) {
+        throw new ObjectUnknownException("Unknown vehicle: " + intendedVehicle);
+      }
+    }
+
+    return orderService.fetchObjects(OrderSequence.class,
+                                     new OrderSequenceFilter(intendedVehicle))
+        .stream()
+        .map(order -> GetOrderSequenceResponseTO.fromOrderSequence(order))
+        .collect(Collectors.toList());
+  }
+
+  public GetOrderSequenceResponseTO getOrderSequenceByName(String name)
+      throws ObjectUnknownException {
+    requireNonNull(name, "name");
+
+    return orderService.fetchObjects(OrderSequence.class,
+                                     o -> o.getName().equals(name))
+        .stream()
+        .map(o -> GetOrderSequenceResponseTO.fromOrderSequence(o))
+        .findAny()
+        .orElseThrow(() -> new ObjectUnknownException("Unknown transport order: " + name));
+  }
+
+  public void putOrderSequenceComplete(String name)
+      throws ObjectUnknownException,
+             IllegalArgumentException,
+             InterruptedException,
+             ExecutionException {
+    requireNonNull(name, "name");
+
+    OrderSequence orderSequence = orderService.fetchObject(OrderSequence.class, name);
+    if (orderSequence == null) {
+      throw new ObjectUnknownException("Unknown order sequence: " + name);
+    }
+
+    try {
+      kernelExecutor.submit(
+          () -> orderService.markOrderSequenceComplete(orderSequence.getReference())
       ).get();
     }
     catch (InterruptedException exc) {
