# openTCS-Kernel-Extension-HTTP-Services/src/main/java/org/opentcs/kernel/extensions/servicewebapi/v1/V1RequestHandler.java
@@ -9,15 +9,18 @@ package org.opentcs.kernel.extensions.servicewebapi.v1;
 
 import org.opentcs.kernel.extensions.servicewebapi.JsonBinder;
 import static java.util.Objects.requireNonNull;
+import java.util.concurrent.ExecutionException;
 import javax.inject.Inject;
 import org.opentcs.access.KernelRuntimeException;
 import org.opentcs.data.ObjectExistsException;
 import org.opentcs.data.ObjectUnknownException;
 import org.opentcs.kernel.extensions.servicewebapi.HttpConstants;
 import org.opentcs.kernel.extensions.servicewebapi.RequestHandler;
+import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetOrderSequenceResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetPeripheralJobResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetTransportOrderResponseTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.GetVehicleAttachmentInfoResponseTO;
+import org.opentcs.kernel.extensions.servicewebapi.v1.binding.PostOrderSequenceRequestTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.PostPeripheralJobRequestTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.PostTransportOrderRequestTO;
 import org.opentcs.kernel.extensions.servicewebapi.v1.binding.PutVehicleAllowedOrderTypesTO;
@@ -129,6 +132,14 @@ public class V1RequestHandler
                 this::handleGetTransportOrderByName);
     service.get("/transportOrders",
                 this::handleGetTransportOrders);
+    service.post("/orderSequences/:NAME",
+                 this::handlePostOrderSequence);
+    service.get("/orderSequences",
+                this::handleGetOrderSequences);
+    service.get("/orderSequences/:NAME",
+                this::handleGetOrderSequenceByName);
+    service.put("/orderSequences/:NAME/complete",
+                this::handlePutOrderSequenceComplete);
     service.post("/dispatcher/trigger",
                  this::handlePostDispatcherTrigger);
     service.get("/peripheralJobs",
@@ -203,6 +214,46 @@ public class V1RequestHandler
             )
         )
     );
+  }
+
+  private Object handlePostOrderSequence(Request request, Response response)
+      throws ObjectUnknownException,
+             ObjectExistsException,
+             IllegalArgumentException,
+             IllegalStateException {
+    response.type(HttpConstants.CONTENT_TYPE_APPLICATION_JSON_UTF8);
+    return jsonBinder.toJson(
+        GetOrderSequenceResponseTO.fromOrderSequence(
+            orderHandler.createOrderSequence(
+                request.params(":NAME"),
+                jsonBinder.fromJson(request.body(), PostOrderSequenceRequestTO.class)))
+    );
+  }
+
+  private Object handleGetOrderSequences(Request request, Response response) {
+    response.type(HttpConstants.CONTENT_TYPE_APPLICATION_JSON_UTF8);
+    return jsonBinder.toJson(
+        statusInformationProvider.getOrderSequences(
+            valueIfKeyPresent(request.queryMap(), "intendedVehicle")
+        )
+    );
+  }
+
+  private Object handleGetOrderSequenceByName(Request request, Response response) {
+    response.type(HttpConstants.CONTENT_TYPE_APPLICATION_JSON_UTF8);
+    return jsonBinder.toJson(
+        statusInformationProvider.getOrderSequenceByName(request.params(":NAME"))
+    );
+  }
+
+  private Object handlePutOrderSequenceComplete(Request request, Response response)
+      throws ObjectUnknownException,
+             IllegalArgumentException,
+             InterruptedException,
+             ExecutionException {
+    statusInformationProvider.putOrderSequenceComplete(request.params(":NAME"));
+    response.type(HttpConstants.CONTENT_TYPE_TEXT_PLAIN_UTF8);
+    return "";
   }
 
   private Object handlePostWithdrawalByOrder(Request request, Response response)
